[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Objects/Pet/Components/Info/Personality/personality_value_group_renderer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Pet/Components/Info/Personality/personality_value_renderer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Objects/Pet/Components/Info/Personality/personality_renderer.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Nunito/Nunito-Black.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.235294, 0.427451, 0.568627, 0.294118 )
border_width_left = 5
border_width_top = 10
border_width_right = 5
border_color = Color( 0.160784, 0.321569, 0.443137, 0.294118 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 60.0
content_margin_right = 60.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.0980392, 0.462745, 0.823529, 0.686275 )
border_width_bottom = 8
border_color = Color( 0.0431373, 0.360784, 0.811765, 0.686275 )
border_blend = true
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=18]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.223529, 0.345098, 0.458824, 0.0980392 )
border_width_left = 2
border_width_top = 10
border_width_right = 2
border_color = Color( 0.239216, 0.364706, 0.509804, 0.196078 )
border_blend = true
corner_radius_top_left = 36
corner_radius_top_right = 36
corner_radius_bottom_right = 36
corner_radius_bottom_left = 36
corner_detail = 20
shadow_color = Color( 0.164706, 0.164706, 0.180392, 0.0784314 )
shadow_offset = Vector2( 0, 6 )

[sub_resource type="Theme" id=12]

[sub_resource type="Theme" id=13]

[sub_resource type="Theme" id=14]

[sub_resource type="Theme" id=15]

[sub_resource type="DynamicFont" id=2]
size = 22
extra_spacing_top = 4
extra_spacing_char = 5
font_data = ExtResource( 5 )

[node name="PersonalityRenderer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="PersonalityRenderer" type="VBoxContainer" parent="."]
margin_right = 828.0
margin_bottom = 260.0
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonalityValuesPanel" type="PanelContainer" parent="PersonalityRenderer"]
margin_right = 828.0
margin_bottom = 260.0
custom_styles/panel = SubResource( 18 )

[node name="PersonalityValuesContainer" type="HBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 808.0
margin_bottom = 240.0
custom_constants/separation = 5

[node name="ActiveGroupRenderer" type="VBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer"]
margin_right = 153.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )
filled_font_color = Color( 0.878431, 0.984314, 1, 0.784314 )

[node name="Box5" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer"]
margin_right = 153.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 5
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box4" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer"]
margin_top = 46.0
margin_right = 153.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 4
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box3" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer"]
margin_top = 92.0
margin_right = 153.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 13 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 3
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box2" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer"]
margin_top = 138.0
margin_right = 153.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 14 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 2
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box1" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer"]
margin_top = 184.0
margin_right = 153.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Label" type="Label" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/ActiveGroupRenderer/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.843137, 0.878431, 0.905882, 0.686275 )
custom_fonts/font = SubResource( 2 )
text = "HYPER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CleanGroupRenderer" type="VBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer"]
margin_left = 158.0
margin_right = 312.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )
filled_font_color = Color( 0.878431, 0.984314, 1, 0.784314 )

[node name="Box5" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer"]
margin_right = 154.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 5
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box4" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer"]
margin_top = 46.0
margin_right = 154.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 4
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box3" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer"]
margin_top = 92.0
margin_right = 154.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 13 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 3
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box2" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer"]
margin_top = 138.0
margin_right = 154.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 14 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 2
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box1" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer"]
margin_top = 184.0
margin_right = 154.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Label" type="Label" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/CleanGroupRenderer/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.843137, 0.878431, 0.905882, 0.686275 )
custom_fonts/font = SubResource( 2 )
text = "TIDY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayfulGroupRenderer" type="VBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer"]
margin_left = 317.0
margin_right = 470.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )
filled_font_color = Color( 0.878431, 0.984314, 1, 0.784314 )

[node name="Box5" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer"]
margin_right = 153.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 5
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box4" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer"]
margin_top = 46.0
margin_right = 153.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 4
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box3" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer"]
margin_top = 92.0
margin_right = 153.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 13 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 3
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box2" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer"]
margin_top = 138.0
margin_right = 153.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 14 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 2
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box1" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer"]
margin_top = 184.0
margin_right = 153.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Label" type="Label" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/PlayfulGroupRenderer/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.843137, 0.878431, 0.905882, 0.686275 )
custom_fonts/font = SubResource( 2 )
text = "SILLY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmartGroupRenderer" type="VBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer"]
margin_left = 475.0
margin_right = 629.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )
filled_font_color = Color( 0.878431, 0.984314, 1, 0.784314 )

[node name="Box5" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer"]
margin_right = 154.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 5
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box4" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer"]
margin_top = 46.0
margin_right = 154.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 4
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box3" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer"]
margin_top = 92.0
margin_right = 154.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 13 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 3
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box2" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer"]
margin_top = 138.0
margin_right = 154.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 14 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 2
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box1" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer"]
margin_top = 184.0
margin_right = 154.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Label" type="Label" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SmartGroupRenderer/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.843137, 0.878431, 0.905882, 0.686275 )
custom_fonts/font = SubResource( 2 )
text = "CLEVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocialGroupRenderer" type="VBoxContainer" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer"]
margin_left = 634.0
margin_right = 788.0
margin_bottom = 220.0
size_flags_horizontal = 3
custom_constants/separation = 10
script = ExtResource( 1 )
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )
filled_font_color = Color( 0.878431, 0.984314, 1, 0.784314 )

[node name="Box5" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer"]
margin_right = 154.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 5
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box4" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer"]
margin_top = 46.0
margin_right = 154.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 4
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box3" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer"]
margin_top = 92.0
margin_right = 154.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 13 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 3
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box2" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer"]
margin_top = 138.0
margin_right = 154.0
margin_bottom = 174.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 14 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
level = 2
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Box1" type="Panel" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer"]
margin_top = 184.0
margin_right = 154.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
theme = SubResource( 15 )
custom_styles/panel = SubResource( 19 )
script = ExtResource( 2 )
value = 0
empty_style_box = SubResource( 19 )
filled_style_box = SubResource( 1 )

[node name="Label" type="Label" parent="PersonalityRenderer/PersonalityValuesPanel/PersonalityValuesContainer/SocialGroupRenderer/Box1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.843137, 0.878431, 0.905882, 0.686275 )
custom_fonts/font = SubResource( 2 )
text = "LOVEY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
